# Tree_Cybernetics

./: .gitignore  .gitmodules  3d.cpp  3d.h  CMakeLists.txt  Cyborg  Cyborg.cpp  Purpose  Purpose.cpp  README.md  Tree_Cybernetics  Tree_Cybernetics.cpp  Treelon  Treelon.py  definite_purpose  makefile  meditate  meditate.cpp  meditate.runs0  pyproject.toml
.github/workflows/: python-app.yml
Holon_Factory/: Holon_Factory.cpp
Robots/: Raw.url
Treelon_Game/: BuilderMode.py  Car.xcf  Character.xcf  Map.py  Mechanics.py  README.md  Renderable.idea  Road.xcf  RoadRight.xcf  Sidewalk.xcf  Treelon.lisp  Treelon.py  Zeus.xcf  ZeusFlipped.xcf  pixilate.py  scene1.map  test_treelon.py  treegame.py  wallpaper  wget-log  wget-log.1  wget-log.2
Treelon_Game/Treelon_Rich/: README.md  main.py
Treelon_Game/dialog/: intro
Treelon_Game/imgs/: BikeRack.xcf  Bollard.xcf  Curb.xcf  Road.xcf  RoadRight.xcf  Tree.xcf  TreeBase.xcf  Zeus.xcf  new_collin.xcf
learn_open_gl/: bookmark
opengl/: -tree-  3d_square.cpp  3d_square.h  Alpha  Alpha.cpp  CMakeCache.txt  CMakeLists.txt  Cyborg  Empire  Empire.cpp  Makefile  Purpose  Purpose.cpp  README.md  Space_Cleaner.h  TreeCybernetics.cpp  Treelon  Treelon.cpp  break  break.cpp  cmake_install.cmake  http  http.cpp  kcc  kcc.cpp  kuberlog.cpp  meditate  space_clean  space_clean.cpp  test.cpp  test_space_clean  test_space_clean.cpp  test_space_clean[1]_include.cmake  test_space_clean[1]_tests.cmake  tree.cpp
opengl/glad/: glad.c  glad.h
opengl/lib/: libgmock_maind.so.1.10.0  libgmockd.so.1.10.0  libgtest_maind.so.1.10.0  libgtestd.so.1.10.0
